Adicione foto gatico

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Mi Proyecto Final</h1>
+    <h2>Poliandino 2022</h2>
+    <div class="gatitos">
+        <img src="./assets/IMG/snowshoe.jpg" alt="gatito">
+    </div>
 </body>
 </html>
